tests/fail/stacked_borrows/unescaped_static.stderr
error: Undefined Behavior: attempting a read access using <TAG> at ALLOC[0x1], but that tag does not exist in the borrow stack for this location
  --> $DIR/unescaped_static.rs:LL:CC
   |
LL |     let _val = unsafe { *ptr_to_first.add(1) };
   |                         ^^^^^^^^^^^^^^^^^^^^
   |                         |
   |                         attempting a read access using <TAG> at ALLOC[0x1], but that tag does not exist in the borrow stack for this location
   |                         this error occurs as part of an access at ALLOC[0x1..0x2]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the Stacked Borrows rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <TAG> was created by a SharedReadOnly retag at offsets [0x0..0x1]
  --> $DIR/unescaped_static.rs:LL:CC
   |
LL |     let ptr_to_first = &ARRAY[0] as *const u8;
   |                        ^^^^^^^^^
   = note: BACKTRACE:
   = note: inside `main` at $DIR/unescaped_static.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

